kubernetes.yaml.code-workspace 2.yml
apiVersion: v1
kind: Pod
metadata:
  name: envvars-multiple-secrets
spec:
  containers:
  - name: envars-test-container
    image: nginx
---
#------Deployment---------#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx 
    #---------matching lables / replicas------#
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      #----------Pod-----------#
  template:
    metadata:
      labels:
        app: nginx
        #-------containers docker images-------#
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        #-------volumemount--------#
        volumeMount:
        - mouthPath: /test-ebs
          name: test-volume

---
#services
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP 
      port: 80          #Service port is arbitrary
      targetPort: 3000  # targetport must match the port, the container is listening at !
---
#muiltport Service
apiVersion: v1
name: service
metadata:
    name: mongodb-service
spec:
    selector:
        app: mongodb
    ports:
        - name: mongodb              #name must be added
        protocol: TCP
        port: 80
        targetPort: 3000
        - name: mongobd-exporter    #name must be added
        protocol: TCP
        port: 3001
        targetPort: 3001
        
---
#headless Service
apiVersion: v1
kind: Service 
metadata:
    name: mongodb-service-headless
spec:
  clusterIP: None #DNS Lookup Service 
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
      NodePort: 32767

---
# clusterIP / Nodeport / LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP / NodePort / LoadBalancer 
  selector:
    app: microservice-one
  ports:
    - portocol: TCP
      port: 3200 #2
      targetPort: 3000 #3
      NodePort: 30010 #1

---
#Ingree
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
#routing rules
  rules:
  - host: myapp.com
    http:
      paths:
      - backend:
            serviceName: myapp-internal-service
            servicePort: 8000



---
#----ingress----#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: myapp-ingress
spec:
    rules: #routing rules
    -host: myapp.com #forward request to the internal service  - vaild domain ip address
    http: # Step: incoming request gets forwated to internal service
        paths: /payment #the URL path http://my-app.com/payment
        - backend:
            serviceName: myapp-internal-service #should match in internal
            servicePort: 8080 #should match internal port:8000

---
---
apiVersion: apps/v1
kind: Deployment
metadata:
    lables:
        app: mongo-express
spec:
    containers:
       - name: mongo-express
         image: mongo-express
         ports:
         - containerPorts: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-server
    lables:
    app: mongodb-server
spec:
    replicas: 4
    selector:
        matchLables: 
            app: mongodb-server
template:
    metadata:
        name:
        app: mongodb-server
spec:
    containers:
        - name: mongodb-container
          image: mongodb
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: mongodb-configmap-file
              mountPath: /ragesh/config
            - name: mongodb-secret-file
              mouthPath: /ragesh/secret
              readOnly: true         
    volumes:
        - name: mongodb-configmap-file
            configMap:
                name: mongodb-config-map
        - name: mongodb-secret-file
            secret:
                sercetName: mongobd-sercet
